--- a/Assets/Tests/Tests.asmdef
+++ b/Assets/Tests/Tests.asmdef
@@ -4,7 +4,10 @@
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "GameLogicScripts"
+        "GameLogicScripts",
+        "PlayScripts",
+        "",
+        "StatisticsScripts"
     ],
     "includePlatforms": [
         "Editor"
